deployment/openshift/bootstrap-lab/manifests/nvidia-operator/00-nvidia-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  name: nvidia-gpu-operator
